--- a/dmp/security.mdx
+++ b/dmp/security.mdx
@@ -1,23 +1,32 @@
 ---
 title: "Security"
+description: "Information about deBridge security audit processes and bug bounty program"
 ---
 
-Dolor deserunt laborum Lorem aliquip aliqua aliqua sint laboris aliqua cillum ex aliqua reprehenderit ad. Proident esse aliquip sint dolor sint aute ea voluptate. Sunt sit eiusmod adipisicing reprehenderit.
+# Has deBridge been audited?
+Yes, deBridge's smart contracts have been audited by [Halborn](https://halborn.com/), [Zokyo](https://www.zokyo.io/), [Ackee
+Blockchain](https://ackeeblockchain.com/) and [Neodyme](https://neodyme.io/).
 
-Dolore irure aliqua duis ullamco. Aliquip aute tempor ex duis consectetur laboris proident labore minim nostrud id qui. Nulla deserunt aute aliquip pariatur est magna dolore nulla adipisicing labore ex irure excepteur. Veniam aute ad fugiat exercitation sint fugiat proident deserunt ea culpa tempor dolor. Irure cillum elit ut enim.
+Security will always be deBridge's main priority and it is vital for the protocol to be reliable and secure at all times. It’s one of the main
+components that will determine the future progression of cross-chain interoperability, and as such the deBridge team will maintain this as a main
+focus area both before and after the protocol launch. 
 
-Nulla nisi culpa do mollit. Ut enim nostrud do pariatur fugiat proident. Exercitation nisi anim excepteur duis minim officia. Fugiat excepteur veniam qui duis deserunt tempor elit non deserunt aliqua occaecat et cupidatat non. Proident sunt anim tempor commodo.
+Some of our key focus areas and security strategies can be found in [this blog
+post](https://blog.debridge.finance/10-strategies-for-cross-chain-security-8ed5f5879946).
 
-Lorem minim nulla laborum nostrud laboris ullamco consequat exercitation culpa ea consectetur adipisicing ad reprehenderit. Sint est commodo aliqua esse ex id mollit id laborum ipsum velit adipisicing pariatur. Aute id elit aliquip excepteur elit dolore ex ea sunt. Pariatur qui esse amet eu Lorem excepteur ex incididunt amet culpa culpa ad excepteur occaecat. Ut aliqua sint et nisi aute aliqua ex aliquip laborum ullamco deserunt.
+# Third-party security audits
+deBridge protocol and periphery modules passed more than 25+ security audits. A comprehensive list of audit reports can be found in the [deBridge
+GitHub repository](https://github.com/debridge-finance/debridge-security).
 
-Amet nostrud minim ipsum laborum. Fugiat esse laborum exercitation anim mollit labore ullamco. Est cupidatat dolore commodo cupidatat velit mollit. Excepteur ea eiusmod eiusmod anim anim deserunt labore sit veniam id irure et. Sunt sit excepteur proident aliqua.
+# Immunefi bug bounty program
+deBridge has presented a $200,000 Bug Bounty Program on Immunefi. 
 
-Fugiat duis consectetur consectetur anim occaecat sint enim ea irure adipisicing cillum. Aliqua aliquip excepteur sit commodo anim ut. Ad eiusmod laboris aliquip adipisicing esse sunt officia id consequat. Esse eiusmod nostrud deserunt eiusmod ipsum nostrud officia amet anim aliqua dolore tempor laboris. Qui laboris ullamco commodo ipsum laborum elit dolore Lorem consectetur aute aute Lorem. In Lorem ullamco cupidatat cillum dolore enim aliqua ea ex.
+This bug bounty program is focused on preventing:
+- Loss of user funds locked (principal) by freezing or theft
+- Loss of governance funds
+- Theft of unclaimed assets
+- Permanent freezing of unclaimed assets
+- Smart contract fails to deliver promised returns
+- Unauthorized minting of wrapped assets that will lead them to lose peg
 
-Sint enim reprehenderit officia cillum voluptate ea consectetur voluptate exercitation id id. Ad nostrud consequat laboris in irure nostrud et amet enim anim cillum sint veniam. Id magna veniam cillum incididunt magna consequat. Magna cupidatat irure velit eu Lorem est nulla laborum consequat. Adipisicing amet enim aliquip ex.
-
-Laboris ut mollit cillum tempor consectetur commodo occaecat voluptate ad sit dolor reprehenderit id sunt. Dolore fugiat sint duis amet enim anim officia. Sint magna aliqua quis tempor adipisicing occaecat occaecat incididunt ex dolore qui ipsum mollit fugiat. Ipsum elit elit ex nulla nisi incididunt reprehenderit laborum ut occaecat anim duis enim cillum. Pariatur aute Lorem occaecat do dolore.
-
-Eu in occaecat nulla deserunt dolor consectetur irure sint eiusmod consectetur consectetur. Aliqua adipisicing in dolore fugiat eu cupidatat nisi veniam veniam ullamco tempor aute. Enim eu excepteur culpa anim eiusmod voluptate commodo anim voluptate et fugiat. Sit culpa velit aliquip anim consequat elit exercitation incididunt ea laboris esse anim.
-
-Pariatur ullamco fugiat culpa ut mollit anim Lorem ut. Mollit voluptate nisi cupidatat pariatur esse aliqua magna aliquip laborum cupidatat esse. Ex labore dolor aliquip do reprehenderit ullamco culpa deserunt. Exercitation enim occaecat proident excepteur cillum esse velit. Est fugiat deserunt nisi magna duis ullamco duis id id aliquip fugiat non tempor. Deserunt occaecat sunt laborum reprehenderit aute fugiat id nostrud nisi sint aute excepteur. Ad do magna cillum aliquip.
+A more detailed description can be found on the [Immunefi website](https://immunefi.com/bounty/debridge/).
