--- a/dev-guides/cross-chain-call-lifecycle.mdx
+++ b/dev-guides/cross-chain-call-lifecycle.mdx
@@ -1,23 +1,76 @@
 ---
 title: "Cross-Chain Call Lifecycle"
 ---
+Blockchains by their nature are siloed environments that cannot directly communicate with each other. That is why any messaging protocol is a complex
+set of components, making any cross-chain transaction a multistage process, so just initiating a cross-chain transaction typically is not enough. It
+is important to understand how the deBridge infrastructure works so you can manage your submissions (either manually or even automatically)
+consciously and confidently.
 
-Nisi pariatur nulla tempor pariatur non consequat anim aliqua aliquip ut elit ea nulla minim. Culpa non aliqua in tempor dolor aliqua tempor enim tempor. Voluptate adipisicing nisi commodo aliquip labore eiusmod nulla sit ut sunt. In fugiat Lorem id aliquip cillum incididunt anim dolor dolor. Fugiat id laboris est exercitation qui fugiat eu laborum irure. Sunt elit ex sit eu esse minim ea ea officia est ea magna velit ad. Et officia ea reprehenderit qui elit nisi irure do voluptate esse non non.
+The following scheme visualizes a normal cycle of a typical cross-chain call, as it may look for the [conceptual cross-chain
+dApp](https://github.com/debridge-finance/debridge-cross-chain-dapp-example) where Incrementor is used as an example of the smart contract that sends
+a cross-chain message:
 
-Veniam irure proident reprehenderit excepteur sint aliqua ut magna. Veniam officia aute dolor nulla exercitation. Nisi duis labore labore excepteur id do laboris sunt quis commodo. Ipsum eu dolore laborum incididunt non anim magna esse esse exercitation irure elit.
+![Cross-chain Call Lifecycle](/images/cross-chain-call-lifecycle.png)
 
-Esse dolor duis elit enim fugiat tempor non dolore cupidatat sunt. Culpa commodo elit id consequat enim esse mollit nostrud tempor. Excepteur officia ipsum elit laboris id mollit quis dolor. Ea id eu velit pariatur. Excepteur eu duis qui duis nisi eiusmod.
+When a call to the `deBridgeGate.send()` method is made on the origin (source) chain, the gate contract validates the input (its args and the
+`autoParams` struct), and if everything is correct (the data is unambiguous, the input asset covers the fees, etc), a special `Sent` event is emitted.
+This event exposes the following details of the submission:
+- `submissionId`, the identifier of the cross-chain transaction you've initiated;
+- `debridgeId`, the cross-chain identifier of the input asset, needed to correctly handle tokens across supported chains;
+- `args` and the `autoParams` structure that contains information about the passed message.
 
-Esse tempor aliquip exercitation cillum. Magna fugiat aute proident mollit sunt consequat. Aute duis aliquip ullamco cupidatat mollit aliqua excepteur. Non occaecat irure cupidatat anim esse culpa amet aute commodo elit. Quis consectetur consectetur est aute laborum dolor aliquip occaecat et excepteur eu nostrud in. Nisi deserunt tempor anim ea ut laborum.
+You are advised to monitor this event to ensure your submission has been accepted and the cross-chain transaction has been initiated.
 
-Amet consequat cupidatat culpa exercitation anim id minim duis aute deserunt nisi et dolor voluptate. Sunt amet tempor est proident reprehenderit aute nulla laborum aliquip in. Mollit ea qui fugiat adipisicing nostrud enim commodo fugiat. Eu occaecat velit duis cillum incididunt aliquip consequat dolore Lorem magna amet. Laborum fugiat velit ea anim irure amet. Dolore dolore anim consectetur aliquip est proident sit ut.
+[deBridge validators](https://app.debridge.finance/validation-progress) listen for these events emitted by the deBridgeGate smart contract deployed on
+all supported chains, and for each tracked event validator performs the following set of actions:
+- waits a specific amount of block confirmations (12 block confirmations for supported EVM chains, and 256 block confirmations for the Polygon
+  network) to ensure the finality of the transaction where the event has been emitted,
+- validates the args and the structure,
+- if the data is correct, sign the message with its own private key, and publish the signature to Arweave.
 
-Nisi deserunt amet commodo labore laboris esse fugiat ad adipisicing consectetur irure quis. Excepteur esse veniam ipsum pariatur sunt ipsum fugiat commodo eiusmod qui magna sit. Quis cupidatat ullamco mollit laborum id culpa. Anim quis nisi commodo deserunt eiusmod aliquip labore consectetur voluptate dolore. Do consequat elit sint voluptate incididunt anim esse officia excepteur veniam. Ullamco incididunt aute consequat nulla aliqua officia nostrud. Voluptate sit commodo elit eu mollit consectetur non mollit.
+<Note>
 
-Consequat laborum enim enim aliquip non est aute qui tempor ut ullamco laborum ut. Nostrud commodo culpa magna dolor irure nisi veniam ad magna et laborum reprehenderit ut culpa. Et laborum culpa fugiat minim proident in mollit aliquip. Laboris qui qui labore commodo enim.
+Note: Validators' financial responsibility to be enabled through [Slashing and Delegated Staking](/dmp/slashing-and-delegated-staking).
 
-Proident adipisicing sit minim dolore dolore culpa ad amet occaecat ullamco commodo elit Lorem. Consequat voluptate incididunt adipisicing ad ullamco elit amet ex excepteur pariatur amet amet fugiat exercitation. Qui ullamco aliqua aliquip id ut. Velit ex duis culpa enim mollit dolore deserunt. Voluptate exercitation dolore reprehenderit mollit laboris.
+</Note>
 
-Exercitation laborum proident sint do consectetur nisi. Sint est incididunt minim occaecat mollit mollit mollit ipsum proident aliqua ipsum. Nulla sit ut culpa pariatur elit ullamco nisi consequat. Officia cupidatat esse pariatur aute laboris aliquip reprehenderit anim consectetur ex in ipsum cillum. Voluptate tempor pariatur deserunt sit do anim cupidatat ullamco. Mollit magna minim id et exercitation minim ad sint Lorem cillum cillum qui fugiat. Mollit eiusmod esse ut anim pariatur tempor do qui ipsum.
+After the minimum required number of validators have signed the message (eight at the time of writing, ⅔ of all possible signatures), the submission
+is confirmed and may be claimed on the destination chain.
 
-Ex deserunt aliqua nostrud sint irure voluptate id amet proident do. Aute ut Lorem laboris ea commodo amet esse esse eiusmod nulla culpa laborum. Voluptate exercitation aliqua ipsum ad laborum est reprehenderit. Anim dolor nisi nostrud Lorem cillum cillum culpa pariatur ex. Aliquip aute velit veniam Lorem minim veniam. Qui non incididunt irure et officia consectetur pariatur nisi ullamco consequat.
+<Note>
+
+You can access the actual minimum required number of signatures by querying the `minConfirmations` property of the `signatureVerifier` contract:
+
+```solidity
+ISignatureVerifier(IDebridgeGate(deBridgeGate).signatureVerifier).minConfirmations
+```
+
+</Note>
+
+To claim the submission, a claiming transaction should be crafted, signed, and sent to the blockchain. Such transaction must contain a call to the
+`claim()` method of the `deBridgeGate` contract with the submission's data (taken from the `Sent` event) and minimal required number of validators'
+signatures provided as its args.
+
+Worth mentioning that such transactions may be signed and sent by anyone who is willing to pay the gas for its' execution on the destination chain.
+There is no security implication because during the claiming phase the `deBridgeGate` contract first checks the integrity of the message (the args and
+the `autoParams` struct that was initially passed to the `send()` method on the origin chain) by verifying each validator's signature against their public
+key, and then executing the instructions this message contains.
+
+There are three ways to trigger a claiming transaction:
+- manually, by visiting [deExplorer](https://explorer.debridge.finance/), where you can find your cross-chain transaction by its `submissionId` or even
+  by the hash of the origin transaction, then sign the prepared claiming transaction using the browser wallet (MetaMask, etc);
+
+![Claim Details](/images/claim-details.png)
+
+- automatically, by specifying sufficient `executionFee` property within your submission: in this case, Claimers will execute the transaction and
+  deliver the message in case the supplied on the source chain `executionFee` (included gas) covers their gas on the destination chain. 
+
+  Claimer may wait to deliver the message (submission) in case of gas price spikes (if the value of the included gas becomes less than the cost of
+  execution). In this case, you should trigger a claiming txn on your own, either manually or programmatically, and you'll receive back the supplied
+  included gas (instead of the Claimer service);
+
+- programmatically, by constructing a claiming txn with a little help of [deSDK](https://github.com/debridge-finance/desdk) (this is what Claimer
+  service actually does automatically).
+
+After the claiming txn is sent and included in the blockchain, and the `deBridgeGate.claim()` call succeeds, a special `Claimed` event is emitted by the
+`deBridgeGate` contract signaling the successful completion of the cross-chain transaction. Voila!
