--- a/dev-guides/development-tools.mdx
+++ b/dev-guides/development-tools.mdx
@@ -1,23 +1,14 @@
 ---
 title: "Development Tools"
 ---
+Explore our [deBridge Developer Portal](https://debridge.finance/develop) to get started building secure and efficient cross-chain applications.
 
-Exercitation in anim excepteur voluptate ut. Nisi proident culpa in reprehenderit amet deserunt ullamco eu reprehenderit ullamco velit consectetur adipisicing tempor. Pariatur duis Lorem ad enim aute culpa dolore ex veniam incididunt officia esse.
-
-Officia esse veniam qui eiusmod irure. Cillum in consectetur in ullamco elit do Lorem laborum aliqua mollit. Magna aliquip proident irure elit qui. Reprehenderit Lorem qui proident magna enim ut. Cillum ad ullamco quis aliqua ex ex mollit duis tempor sint irure. Veniam duis in dolor enim eu occaecat elit velit ullamco sunt ex laboris.
-
-In labore velit cupidatat consequat do excepteur amet esse cillum ipsum amet Lorem. Est aute adipisicing esse enim aliquip laborum id do tempor velit aliquip id est duis. Labore proident proident et ad reprehenderit et.
-
-Velit laborum irure labore Lorem ex tempor aliqua proident elit ullamco minim. Non consectetur excepteur non ad reprehenderit esse anim culpa. Exercitation consequat adipisicing occaecat aliqua nisi ea consectetur.
-
-Aute velit incididunt eiusmod nisi sint non Lorem esse qui reprehenderit culpa cillum aliquip laboris. Duis cillum laborum est consequat in labore sint eu nostrud consequat velit dolore. Laborum Lorem sunt esse culpa. Est est eiusmod enim quis id voluptate elit excepteur irure. Eiusmod nostrud reprehenderit Lorem ea commodo mollit sit in nulla sit minim. Sint culpa ea reprehenderit est minim voluptate tempor mollit fugiat sint magna ipsum.
-
-Adipisicing minim fugiat ea laborum ullamco voluptate ipsum in irure adipisicing esse occaecat ut. Reprehenderit eiusmod laboris Lorem qui eu esse exercitation aute eu. Incididunt duis magna ut amet Lorem.
-
-Aute dolore officia non mollit pariatur dolor minim veniam cillum deserunt elit. Cillum id exercitation id ad tempor fugiat do esse pariatur. Amet ex velit consequat eiusmod cupidatat magna fugiat eu enim qui in enim. Consectetur labore exercitation id incididunt ipsum reprehenderit Lorem ipsum commodo deserunt irure ad culpa.
-
-Magna est nostrud duis et eu deserunt labore sit elit ipsum. Mollit ex amet eu consequat fugiat reprehenderit quis. Mollit id quis consequat aliqua ea cupidatat duis ad ex magna. Ea tempor tempor consequat qui incididunt veniam pariatur consectetur sint ea nostrud ipsum laboris.
-
-Commodo occaecat duis officia non et id laborum aliqua labore. Nostrud magna anim veniam velit duis est. In non ipsum consectetur veniam aliquip aliqua ad. Ipsum magna qui eu do est aliquip ullamco ullamco amet adipisicing. Consequat irure est aliquip sunt est fugiat nostrud excepteur.
-
-Ullamco irure adipisicing velit sint nisi fugiat officia. Proident sunt eu id mollit quis cupidatat dolore exercitation duis enim qui dolore reprehenderit. Commodo pariatur ea cupidatat excepteur quis ipsum mollit consequat consequat. Anim aliqua id minim quis pariatur excepteur nisi anim pariatur ullamco sunt pariatur dolor. Exercitation ut do id culpa elit voluptate consectetur non voluptate. Reprehenderit laboris aute dolore occaecat. Officia dolore commodo consequat culpa.
+Development tools
+- DLN API: is a high-performance cross-chain trading infrastructure built with deBridge with a unique 0-TVL design (no risks of locked liquidity).
+- [deBridge widget](https://app.debridge.finance/widget): offer seamless and secure bridging and cross-chain value transfers in any application with
+  our customizable widget.
+- [debridge-hardhat](https://github.com/debridge-finance/hardhat-debridge)  is a plugin for Hardhat that provides the toolkit for creating a
+  lightweight and blazing-fast emulation environment, behaving close to how the mainnet setup of the deBridge infrastructure does.
+- [deSDK](https://github.com/debridge-finance/desdk) is a library to send, track, and claim submissions programmatically.
+- [Solana transaction parser](https://github.com/debridge-finance/solana-tx-parser-public) is a powerful tool developed by the deBridge team to parse
+  Solana transactions and analyze them in a human-readable format.
