--- a/dev-guides/evm/interfaces/IDeBridgeToken.mdx
+++ b/dev-guides/evm/interfaces/IDeBridgeToken.mdx
@@ -2,12 +2,38 @@
 title: "IDeBridgeToken"
 ---
 
-Irure aute magna pariatur enim consequat est in. Cillum exercitation laborum aliquip ullamco nulla ex est. Est irure enim proident ad labore veniam dolor aliqua aliquip. Pariatur id Lorem minim ut ipsum quis esse. Sunt enim do reprehenderit id reprehenderit qui dolore do tempor consequat labore. Do esse tempor proident culpa consequat officia aliquip aliqua non aliquip tempor occaecat velit. Ex consequat velit irure non anim do anim consequat elit ex excepteur nisi Lorem.
+## Functions
 
-Dolore dolor amet dolor quis do officia. Sint nostrud adipisicing sit dolor deserunt mollit adipisicing. Ea voluptate id laborum irure sint. Occaecat pariatur magna consectetur amet anim sint. Deserunt duis est eiusmod adipisicing veniam ex elit irure dolor ullamco labore nulla tempor irure. Aute cupidatat velit sit dolor eu voluptate tempor esse sunt veniam culpa do dolore proident. Sunt tempor ut ut officia mollit elit consectetur reprehenderit eiusmod dolor dolore in.
+### mint
 
-Elit anim magna ad aliquip in cupidatat. Ipsum dolore minim et ea. Nostrud consequat deserunt irure incididunt culpa.
+```solidity
+function mint(
+    address _receiver,
+    uint256 _amount
+) external
+```
 
-Consectetur cupidatat do occaecat tempor commodo do consequat non deserunt nostrud nulla irure. Ex adipisicing duis non magna. Elit magna eiusmod eiusmod exercitation consequat adipisicing Lorem tempor. Lorem officia amet occaecat ad mollit quis Lorem sunt est velit deserunt sint non cupidatat. Esse occaecat consequat anim aute.
+Issues new tokens.
 
-Fugiat in sit do aliquip nostrud fugiat labore ut et dolor ut nostrud reprehenderit. Eiusmod nulla adipisicing cillum ipsum cupidatat sunt veniam nostrud. Sit do quis in ullamco velit consequat ex laborum exercitation aliqua occaecat velit. Ullamco enim mollit mollit Lorem non excepteur labore. Non non ut est reprehenderit veniam occaecat nulla veniam dolore amet culpa minim sunt.
+**Parameters:**
+
+| Name         | Type      | Description          |
+|--------------|-----------|----------------------|
+| `_receiver`  | `address` | Token's receiver.    |
+| `_amount`    | `uint256` | Amount to be minted. |
+
+### burn
+
+```solidity
+function burn(
+    uint256 _amount
+) external
+```
+
+Destroys existing tokens.
+
+**Parameters:**
+
+| Name      | Type      | Description         |
+|-----------|-----------|---------------------|
+| `_amount` | `uint256` | Amount to be burnt. |
