--- a/dev-guides/evm/libraries/flags.mdx
+++ b/dev-guides/evm/libraries/flags.mdx
@@ -1,13 +1,68 @@
 ---
 title: "Flags"
 ---
+## Variables
 
-Ullamco qui consequat excepteur irure. Quis laboris magna aliquip voluptate anim eu ullamco deserunt eu et amet eu ullamco et. Laborum sint fugiat aliquip mollit exercitation. Duis non laborum fugiat nostrud duis est irure eiusmod eiusmod ullamco commodo.
+### UNWRAP_ETH
+```solidity
+uint256 public constant UNWRAP_ETH;
+```
+Flag to unwrap ETH
 
-Adipisicing deserunt consectetur non occaecat do dolor exercitation sint in in voluptate officia adipisicing officia. Lorem officia cupidatat ex sunt in. Nulla dolor id tempor consectetur. Aute enim adipisicing commodo et reprehenderit. Laboris exercitation officia in pariatur nisi id ad labore proident eiusmod deserunt veniam amet. Officia ad occaecat ea velit voluptate non proident ullamco commodo deserunt.
+### REVERT_IF_EXTERNAL_FAIL
+```solidity
+uint256 public constant REVERT_IF_EXTERNAL_FAIL;
+```
+Flag to revert if external call fails
 
-In fugiat minim quis eu deserunt Lorem exercitation elit et Lorem est commodo est esse. Veniam velit proident elit qui adipisicing. Nisi labore fugiat irure nulla. Do adipisicing sit in in esse exercitation amet dolor. Amet enim nulla sit reprehenderit ex in eu nostrud qui labore. Quis ipsum eu duis ullamco pariatur dolor velit enim qui ut irure ipsum.
+### PROXY_WITH_SENDER
+```solidity
+uint256 public constant PROXY_WITH_SENDER;
+```
+Flag to call proxy with a sender contract
 
-Veniam id ut ex cillum. Culpa Lorem pariatur fugiat Lorem ut irure Lorem amet proident nulla velit in ea. Aliqua proident ullamco eiusmod labore Lorem sunt consectetur eiusmod est. Pariatur pariatur est magna et excepteur amet ea commodo eiusmod tempor labore exercitation. Magna culpa aliquip exercitation anim enim laboris cupidatat ut irure mollit amet incididunt enim. Exercitation deserunt excepteur non exercitation dolore. Tempor consectetur ut culpa eiusmod ex.
+### SEND_HASHED_DATA
+```solidity
+uint256 public constant SEND_HASHED_DATA;
+```
+Data is hash in DeBridgeGate send method
 
-Culpa aliquip irure adipisicing nostrud ex dolore exercitation laborum anim aute labore. Id aute et sunt velit reprehenderit nisi do. Lorem culpa commodo dolore officia. Dolor ad proident voluptate ullamco quis esse commodo labore veniam laborum in dolore. Culpa pariatur nisi elit consectetur deserunt aute dolore eu quis commodo exercitation voluptate nisi.
+---
+
+## Functions
+
+### getFlag
+```solidity
+function getFlag(
+    uint256 _packedFlags,
+    uint256 _flag
+) internal returns (bool)
+```
+Get flag
+
+#### Parameters:
+
+| Name          | Type     | Description                  |
+|---------------|----------|------------------------------|
+| _packedFlags  | uint256  | Flags packed to uint256      |
+| _flag         | uint256  | Flag to check                |
+
+---
+
+### setFlag
+```solidity
+function setFlag(
+    uint256 _packedFlags,
+    uint256 _flag,
+    bool _value
+) internal returns (uint256)
+```
+Set flag
+
+#### Parameters:
+
+| Name          | Type     | Description                  |
+|---------------|----------|------------------------------|
+| _packedFlags  | uint256  | Flags packed to uint256      |
+| _flag         | uint256  | Flag to set                  |
+| _value        | bool     | Is set or not set            |
