--- a/dev-guides/evm/periphery/SimpleFeeProxy.mdx
+++ b/dev-guides/evm/periphery/SimpleFeeProxy.mdx
@@ -2,12 +2,151 @@
 title: "SimpleFeeProxy"
 ---
 
-Sit enim consectetur culpa reprehenderit commodo tempor ad ut exercitation tempor voluptate nostrud id amet. Nisi laboris qui excepteur exercitation eu quis. Nulla nulla ipsum est fugiat fugiat mollit nisi ullamco ut amet minim id velit. Amet eiusmod amet cillum quis Lorem.
+Helper to withdraw fees from DeBridgeGate and transfer them to a treasury.
 
-Enim ut sint aliquip excepteur excepteur dolore qui. Id do est sunt in id occaecat ea proident culpa ut. Irure velit consequat sunt quis consequat voluptate consequat sunt consectetur reprehenderit.
+---
 
-Nostrud magna sit anim dolore pariatur tempor veniam adipisicing exercitation reprehenderit exercitation laboris sint in. Do aute proident do ut cupidatat. Fugiat et velit mollit eu non consequat ipsum. Eu ipsum dolor ex nulla ullamco sint fugiat. Ex consectetur aliqua ex deserunt sint ad commodo anim fugiat. Amet laborum adipisicing fugiat magna quis voluptate sit commodo ad ipsum velit.
+## Variables
 
-Incididunt duis nulla est proident id et. Id mollit amet magna voluptate mollit eiusmod ex occaecat occaecat deserunt. Voluptate magna voluptate elit tempor eiusmod.
+### debridgeGate
+```solidity
+contract IDeBridgeGate public debridgeGate;
+```
+DeBridgeGate address
 
-Ea non enim consectetur enim enim consequat fugiat. In amet laborum nostrud id. Anim fugiat aliqua consectetur anim laborum laborum enim in sit id duis aliqua.
+### treasury
+```solidity
+address public treasury;
+```
+Treasury address
+
+---
+
+## Functions
+
+### initialize
+```solidity
+function initialize(
+    contract IDeBridgeGate _debridgeGate,
+    address _treasury
+) public
+```
+
+### pause
+```solidity
+function pause() external
+```
+
+### unpause
+```solidity
+function unpause() external
+```
+
+### setDebridgeGate
+```solidity
+function setDebridgeGate(
+    contract IDeBridgeGate _debridgeGate
+) external
+```
+
+### setTreasury
+```solidity
+function setTreasury(
+    address _treasury
+) external
+```
+
+### withdrawFee
+```solidity
+function withdrawFee(
+    address _tokenAddress
+) external
+```
+Transfer collected fees for a token to the treasury.
+
+#### Parameters:
+
+| Name           | Type    | Description                            |
+|----------------|---------|----------------------------------------|
+| _tokenAddress  | address | Address of a deToken on a current chain |
+
+---
+
+### withdrawNativeFee
+```solidity
+function withdrawNativeFee() external
+```
+Transfer collected fees for a native token to the treasury.
+
+### receive
+```solidity
+function receive() external
+```
+
+### getbDebridgeId
+```solidity
+function getbDebridgeId(
+    uint256 _chainId,
+    bytes _tokenAddress
+) public returns (bytes32)
+```
+Calculates asset identifier.
+
+#### Parameters:
+
+| Name           | Type     | Description                    |
+|----------------|----------|--------------------------------|
+| _chainId       | uint256  | Current chain id.              |
+| _tokenAddress  | bytes    | Address of the asset on the other chain. |
+
+---
+
+### getDebridgeId
+```solidity
+function getDebridgeId(
+    uint256 _chainId,
+    address _tokenAddress
+) public returns (bytes32)
+```
+Calculates asset identifier.
+
+#### Parameters:
+
+| Name           | Type     | Description                    |
+|----------------|----------|--------------------------------|
+| _chainId       | uint256  | Current chain id.              |
+| _tokenAddress  | address  | Address of the asset on the other chain. |
+
+---
+
+### getChainId
+```solidity
+function getChainId() public returns (uint256 cid)
+```
+Get current chain id.
+
+---
+
+### _safeTransferETH
+```solidity
+function _safeTransferETH(
+    address to,
+    uint256 value
+) internal
+```
+Transfer ETH to an address, revert if it fails.
+
+#### Parameters:
+
+| Name  | Type     | Description              |
+|-------|----------|--------------------------|
+| to    | address  | recipient of the transfer |
+| value | uint256  | the amount to send        |
+
+---
+
+### version
+```solidity
+function version() external returns (uint256)
+```
+Get this contract's version
