--- a/dev-guides/evm/transfers/OraclesManager.mdx
+++ b/dev-guides/evm/transfers/OraclesManager.mdx
@@ -1,13 +1,132 @@
 ---
 title: "OraclesManager"
 ---
+The base contract for oracles management. Allows adding/removing oracles, managing the minimal required amount of confirmations.
 
-Voluptate occaecat elit commodo non occaecat officia sit. Nulla id sunt elit enim anim ad dolor magna incididunt cupidatat. Ad eu reprehenderit Lorem exercitation eiusmod non esse consequat sint pariatur. Id excepteur sunt aliquip nisi occaecat pariatur fugiat est ut Lorem et quis. Mollit cupidatat ad aliquip ullamco mollit irure. Laboris veniam dolor quis do et ad.
+---
 
-Mollit enim sunt qui ipsum. Est nulla tempor pariatur minim est reprehenderit velit culpa aute sint. Minim enim non est in velit. Veniam non consequat non laboris adipisicing proident.
+## Variables
 
-Laborum laboris eu nisi est ex Lorem incididunt cupidatat. Quis nisi quis enim ex reprehenderit elit laboris occaecat cupidatat velit incididunt mollit. Est aliquip et ex cupidatat. Elit velit laboris aliquip Lorem ut labore. Eiusmod eu aliquip sit excepteur laborum consequat dolor reprehenderit ipsum ex. Culpa et aute minim reprehenderit excepteur. Excepteur incididunt laboris ut est labore esse et sunt mollit fugiat mollit fugiat consequat.
+### minConfirmations
+```solidity
+uint8 public minConfirmations;
+```
+Minimal required confirmations
 
-Labore amet mollit sint nisi laborum laborum sint officia irure id ullamco id ea velit. Culpa est labore cillum fugiat deserunt ipsum ut velit veniam ad. Cillum excepteur et irure do duis eiusmod tempor do esse. Esse velit reprehenderit deserunt tempor. Elit officia reprehenderit dolor qui in.
+### excessConfirmations
+```solidity
+uint8 public excessConfirmations;
+```
+Minimal required confirmations in case of too many confirmations
 
-Irure esse minim ea in. In in mollit sunt nisi cupidatat laboris deserunt laboris commodo. Lorem dolor eu reprehenderit consectetur magna consequat. Ea labore deserunt nulla occaecat. Eiusmod qui laboris id culpa. Laborum esse in sit qui amet et commodo qui magna eiusmod ullamco ad deserunt. Laboris minim cupidatat nisi veniam ad anim nostrud.
+### requiredOraclesCount
+```solidity
+uint8 public requiredOraclesCount;
+```
+Count of required oracles
+
+### oracleAddresses
+```solidity
+address[] public oracleAddresses;
+```
+Oracle addresses
+
+### getOracleInfo
+```solidity
+mapping(address => struct IOraclesManager.OracleInfo) public getOracleInfo;
+```
+Maps an oracle address to the oracle details
+
+---
+
+## Functions
+
+### initialize
+```solidity
+function initialize(
+    uint8 _minConfirmations,
+    uint8 _excessConfirmations
+) internal
+```
+Constructor that initializes the most important configurations.
+
+#### Parameters:
+
+| Name                 | Type   | Description                                             |
+|----------------------|--------|---------------------------------------------------------|
+| _minConfirmations    | uint8  | Minimal required confirmations.                         |
+| _excessConfirmations | uint8  | Minimal confirmations in case of too many confirmations |
+
+---
+
+### setMinConfirmations
+```solidity
+function setMinConfirmations(
+    uint8 _minConfirmations
+) external
+```
+
+Sets minimal required confirmations.
+
+#### Parameters:
+
+| Name              | Type   | Description                        |
+|-------------------|--------|------------------------------------|
+| _minConfirmations | uint8  | Minimal required confirmations.    |
+
+---
+
+### setExcessConfirmations
+```solidity
+function setExcessConfirmations(
+    uint8 _excessConfirmations
+) external
+```
+
+Sets minimal required confirmations in case of too many confirmations.
+
+#### Parameters:
+
+| Name                 | Type   | Description                                             |
+|----------------------|--------|---------------------------------------------------------|
+| _excessConfirmations | uint8  | Minimal confirmations in case of too many confirmations |
+
+---
+
+### addOracles
+```solidity
+function addOracles(
+    address[] _oracles,
+    bool[] _required
+) external
+```
+
+Add oracles.
+
+#### Parameters:
+
+| Name      | Type       | Description                                                               |
+|-----------|------------|---------------------------------------------------------------------------|
+| _oracles  | address[]  | Oracles' addresses.                                                       |
+| _required | bool[]     | A transfer will not be confirmed without oracles having required set true |
+
+---
+
+### updateOracle
+```solidity
+function updateOracle(
+    address _oracle,
+    bool _isValid,
+    bool _required
+) external
+```
+
+Update an oracle.
+
+#### Parameters:
+
+| Name      | Type    | Description                                                         |
+|-----------|---------|---------------------------------------------------------------------|
+| _oracle   | address | An oracle address.                                                  |
+| _isValid  | bool    | Is this oracle valid (i.e. should it be treated as an oracle)?      |
+| _required | bool    | If true, a transfer will not be confirmed without this oracle.       |
