--- a/dev-guides/gathering-data-for-claim.mdx
+++ b/dev-guides/gathering-data-for-claim.mdx
@@ -2,22 +2,22 @@
 title: "Gathering Data for the Claim"
 ---
 
-Ipsum quis et non sit pariatur velit elit voluptate do eiusmod irure. Do fugiat adipisicing cillum aliqua aute consectetur eu nisi eu anim. Lorem deserunt elit duis veniam aliqua esse excepteur labore.
+To claim a submission, a call to the deBridgeGate.claim() method on the destination chain must be crafted using data taken from various sources.
+Though deSDK already [provides a handy method for this](https://github.com/debridge-finance/desdk#tracking-and-executing-claims), we explain here
+where to take and how to prepare this data. 
 
-Et nisi velit do deserunt ea officia fugiat irure nostrud culpa excepteur laboris adipisicing. Id mollit labore laborum qui consectetur nulla aliqua dolore elit enim. Aute amet cupidatat laboris ut fugiat ipsum elit aliqua eiusmod officia in nisi. Incididunt dolor ullamco deserunt elit aliqua consectetur labore et reprehenderit aliqua quis. Duis ad id sunt irure ea minim occaecat labore sit. Aute laboris proident minim aute ex esse Lorem ullamco aute tempor est Lorem deserunt labore.
+- `_debridgeId`, `_amount`, `_receiver`, `_nonce` can be taken from the corresponding args of the Sent event,
+- `_chainIdFrom` is obviously the ID of the origin chain,
+- `_signatures` is the string with the signatures concatenated without a delimiter (don't forget to strip hexadecimal prefixes from each but the first);
+  signatures can be pulled from the deBridge API,
+- `_autoParams` is the encoded `SubmissionAutoParamsFrom` struct, which is the derivative of the `SubmissionAutoParamsTo` with `nativeSender` taken from the
+  Se`nt event: so you need to decode `_autoParams` against the `SubmissionAutoParamsTo` struct, add the fifth element, and encode back against the
+  `SubmissionAutoParamsFrom` struct.
 
-Consectetur enim anim occaecat exercitation minim aliqua. Nostrud nulla voluptate laboris occaecat culpa ad qui magna eiusmod est est sint eu veniam. Quis minim mollit ipsum culpa dolore quis ad excepteur aute ipsum nisi.
+This simple diagram shows the flow of the properties; dashed lines indicate the necessity of data decoding/encoding/unpacking/packing, while the
+straight line shows that the datum should be passed as is:
 
-Sunt ipsum esse officia voluptate dolor occaecat est sint commodo duis qui. Aliquip tempor minim amet elit laborum occaecat ex. Irure labore amet proident ad sit nostrud deserunt id aliqua. Cillum ea quis reprehenderit sunt qui tempor id non commodo exercitation ex anim cillum laboris. Laboris nisi Lorem esse tempor voluptate cillum. Ipsum do adipisicing ad non proident reprehenderit aliqua nulla dolore nostrud dolor.
+![Gathering Data for Claims](/images/gathering-claims)
 
-Lorem in nulla tempor magna consectetur. Pariatur aute in velit consequat nisi labore eiusmod adipisicing est do non. Et ut proident nulla nulla do cupidatat nostrud dolore ad do deserunt. Nisi consectetur sint voluptate consequat duis ut anim sint incididunt velit fugiat consequat.
-
-Reprehenderit est et elit proident reprehenderit nulla officia reprehenderit commodo ad. Officia et qui ad do nulla. Reprehenderit duis ad anim ut sit. Deserunt eiusmod laboris ullamco proident ut veniam ex consectetur sit elit non ex. Ad laborum consequat eiusmod Lorem nostrud dolore consequat. Excepteur enim aliqua et veniam sunt commodo est occaecat in dolore eiusmod nulla voluptate id.
-
-Elit quis quis ullamco eu mollit amet. Ullamco culpa dolor sint labore exercitation sint Lorem irure irure do esse qui. Quis id aute ad ipsum aliquip reprehenderit velit Lorem duis sunt occaecat laborum sunt. Incididunt consequat excepteur ut voluptate duis ut. Aute sint consequat nulla id sint aute amet officia. Ad officia ea exercitation cillum excepteur deserunt. Esse qui ullamco in tempor do aliquip proident adipisicing esse id sit.
-
-Minim enim quis qui eiusmod nulla reprehenderit ad eu elit enim. Aute in labore ullamco dolore ad consectetur qui. Magna culpa veniam sit do commodo dolore ea duis duis nostrud. Do mollit tempor sit nisi.
-
-Amet tempor aute esse adipisicing aliquip. Elit in nisi in laborum pariatur officia ut nulla ipsum est officia tempor. Veniam ex consectetur incididunt ad magna laborum Lorem do irure id. Elit Lorem non excepteur cupidatat.
-
-Nostrud irure aliquip veniam non commodo commodo occaecat. Amet sunt nulla amet do elit elit sint pariatur eu duis ea. Eu pariatur qui magna fugiat velit eu consectetur velit consequat adipisicing velit commodo dolore ad. Aliqua cupidatat minim occaecat velit.
+After all these elements are combined into one single call, you can sign and broadcast your transaction and wait for the `Claimed` event. This will
+indicate a successful submission.
