--- a/dmp/deployed-contracts.mdx
+++ b/dmp/deployed-contracts.mdx
@@ -2,22 +2,39 @@
 title: "Deployed Contracts"
 ---
 
-Anim labore occaecat deserunt nostrud enim sint consectetur eu velit aliquip adipisicing ea dolore. Enim consectetur excepteur mollit irure non non velit et et ad do non. Lorem laboris incididunt enim consectetur sunt amet reprehenderit in aliquip et fugiat ut. Deserunt exercitation ut pariatur ut ea aute et aute non.
+---
 
-Fugiat nulla ut amet magna non. Officia eiusmod culpa qui ut nulla ad sit excepteur ad incididunt commodo duis. Dolor anim proident sint ex ex minim exercitation est fugiat adipisicing dolor reprehenderit.
+## deBridge IaaS Subscription
 
-Voluptate proident non id est incididunt reprehenderit veniam. Velit laborum tempor reprehenderit anim irure excepteur nulla dolor irure amet aute nostrud irure. Anim anim minim proident ut ut.
+### Proxy & Implementation
 
-Labore ea pariatur minim pariatur occaecat esse Lorem. Cupidatat reprehenderit laborum sunt ipsum excepteur sint occaecat exercitation aliqua laborum mollit culpa labore. Quis ad minim veniam irure eu enim veniam aliqua pariatur. Occaecat anim culpa anim ipsum consequat adipisicing ea commodo eu enim fugiat duis sit. Irure ipsum duis tempor voluptate.
+| **Label**        | **Address**                                  |
+| ---------------- | -------------------------------------------- |
+| `Proxy`          | `0x2328Ee20fA271073328DC94e52Dd5b61aa0C91A7` |
+| `Implementation` | `0xf46b9e22a2a5B07bd2F601d9A59b4E01424f5E35` |
 
-Pariatur deserunt elit cupidatat do sint quis sunt qui culpa nisi in esse mollit sit. Sunt mollit qui consectetur eu et occaecat sint. Excepteur ipsum labore adipisicing adipisicing laborum cupidatat. Ut irure qui labore incididunt ad velit nulla minim amet quis commodo velit. Non et amet ex magna mollit sint ut laborum dolore sint eu occaecat laboris sunt. Esse sint tempor ipsum incididunt consequat aliquip.
 
-Officia laboris et ad deserunt sunt. Ex deserunt do veniam dolore dolore consequat veniam non deserunt aliquip commodo consequat exercitation ad. Nisi velit reprehenderit nisi in veniam sunt ut cillum eiusmod mollit consequat. Consectetur tempor exercitation enim eiusmod nostrud nostrud Lorem commodo. Laborum eu id dolor deserunt elit. Quis consectetur nostrud consectetur aliquip. Cupidatat consectetur laboris pariatur ut pariatur laborum minim aliqua sit voluptate culpa incididunt in id.
+### DLN Smart Contracts (Solana)
 
-Aute voluptate irure ipsum et magna cupidatat velit enim exercitation nulla excepteur Lorem culpa aliquip. Do quis minim enim non id. Reprehenderit ad in nisi cillum laborum incididunt consectetur est pariatur non consectetur. Anim elit irure dolor non ut officia enim duis. Aliquip ullamco consectetur duis consequat ea sunt proident sunt. Occaecat aliqua enim proident ex enim anim veniam proident incididunt cupidatat veniam.
+| **Smart Contract** | **Address**                                         | **Description**                                        |
+|--------------------|-----------------------------------------------------|--------------------------------------------------------|
+| `DlnSource`        | `src5qyZHqTqecJV4aY6Cb6zDZLMDzrDKKezs22MPHr4`       | Used to place orders on DLN.                          |
+| `DlnDestination`   | `dst5MGcFPoBeREFAA5E3tU5ij8m5uVYwkzkSAbsLbNo`       | Used to fulfill and cancel DLN orders.               |
 
-Do incididunt ipsum reprehenderit proident adipisicing nostrud voluptate cillum amet. Non consectetur enim labore Lorem veniam ea velit excepteur quis. Cillum tempor nulla aute esse aute veniam cillum. Mollit proident ipsum mollit consectetur. Nulla sint mollit sint minim magna. Voluptate ullamco enim cupidatat sunt dolore aute sunt tempor reprehenderit culpa id in excepteur irure.
 
-Duis proident ad quis nostrud cillum adipisicing nostrud cillum eu velit Lorem. Ea consequat amet ut ad cupidatat ullamco labore occaecat quis laboris duis labore duis fugiat. Excepteur consectetur excepteur sint magna Lorem laboris cupidatat incididunt laboris nostrud aliquip aliqua sit. Eiusmod ullamco sint fugiat tempor tempor ullamco. Laborum irure eu elit enim fugiat incididunt non non. Deserunt amet ullamco ea aliquip culpa ex. Amet duis aliqua dolore irure labore consectetur eiusmod sit proident consectetur.
+| Smart Contract        | Description                                                                                                                                                                                 | Github | Ethereum                                   | BNB Chain                                  | Heco                                       | Polygon                                    | Arbitrum                                   | Avalanche                                  | Fantom                                     | Linea                                      | Base                                       | Optimism                                   | Neon                                       | Gnosis                                     | Lightlink (suspended)                      | Metis                                      | Bitrock                                    | Sonic                                      | CrossFi                                    | Cronos zkEVM                               | Abstract                                   | Berachain                                  | Story                                      | HyperEVM                                   | Zircuit                                    | Flow                                       | Zilliqa                                    | BOB                                        | Mantle                                     | Plume                                      | Sophon                                     | Sei                                        |                                            |
+| --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ |
+| DeBridgeGate          | This contract is the main point of cross-chain interactions coming from users and protocols. Its “send” method enables sending arbitrary messages and assets cross-chain in one transaction | LINK   | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0xa706DaF168865b0b334ef8Ca2418F5AAC55a4b16 | 0xa706DaF168865b0b334ef8Ca2418F5AAC55a4b16 | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43de2d77bf8027e25dbd179b491e8d64f38398aa | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0x43dE2d77BF8027e25dBD179B491e8d64f38398aA | 0xa706DaF168865b0b334ef8Ca2418F5AAC55a4b16 |                                            |
+| DeBridgeToken         | ERC20 token that is used as a wrapped asset (deAsset). Protocol guarantees that all deAssets are 1:1 backed by the collateral locked in DeBridgeGate smart contract on the source chain     | LINK   | 0xf8A2902c0a5f817F5e22C82f453538d3f0734C2b | 0xf8A2902c0a5f817F5e22C82f453538d3f0734C2b | 0xf8A2902c0a5f817F5e22C82f453538d3f0734C2b | 0xf8A2902c0a5f817F5e22C82f453538d3f0734C2b | 0xf8A2902c0a5f817F5e22C82f453538d3f0734C2b | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0x55C93b20Dd2F790AC429D6341a022A781791654A | 0x0e4AdD4DC86Ae1Aa0FA43Bd7e6a9fB8Be2d5504d | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0x3c899981AfbE5E18039F842376E60eB28C26B055 | 0x3c899981AfbE5E18039F842376E60eB28C26B055 | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656b63d9eeba6d114f6be19565177893e5bcbf | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xF28ABd7e2f87048c0e59868961F66Ac940F64be9 | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF | 0xc1656B63D9EEBa6d114f6bE19565177893e5bCBF |                                            |
+| DeBridgeTokenDeployer | DeBridgeTokenDeployer is a deAsset deployment factory                                                                                                                                       | LINK   | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0xF0Bbd65d74ab979f7d1d50Ff16E41182f822D2a3 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x96039DA676077EAD5d9bee4987002f5eDEbCDE87 | 0x96039DA676077EAD5d9bee4987002f5eDEbCDE87 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6ffe0695b30b2bad424683ee3bc534ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 | 0xA7738b912812574275c8DEfBb1b39F52a8cAd79a | 0x8244d6Ffe0695B30b2bAD424683Ee3bc534Ea464 |
+| SignatureVerifier     | This smart contract verifies the validity of all validators’ signatures to execute the sent transaction on the destination chain in case at least 2/3 of the signatures are valid.          | LINK   | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x9EB190eCB72D22cE75de332F0D38C31211aa0CfC | 0x9EB190eCB72D22cE75de332F0D38C31211aa0CfC | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3b3c098348b879c9e4f15cecc8046d9c8a8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x2194d45dE8B2A8C92149359988E09A893903Ba4b | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c | 0x949b3B3c098348b879C9e4F15cecc8046d9C8A8c |
+| CallProxy             | CallProxy smart contract to execute the external call with a transferred message to the receiving smart contract.                                                                           | LINK   | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x6AB662bf028A3138e73AAc0f6e1B23c926308560 | 0x6AB662bf028A3138e73AAc0f6e1B23c926308560 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0c79f5532f3b2a16ad1e4282a5daf81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x043Be37c9c4ddE96f158A9F984D788Ea37F35575 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 | 0x8a0C79F5532f3b2a16AD1E4282A5DAF81928a824 |
 
-Non aute excepteur elit elit aliqua nostrud ut reprehenderit irure adipisicing laborum. Reprehenderit laboris eiusmod dolore irure laboris ad exercitation nostrud sint cupidatat est Lorem irure. Esse nostrud nostrud sit culpa velit duis. Incididunt minim incididunt quis veniam dolore consequat reprehenderit culpa amet cillum. Id excepteur ex non commodo reprehenderit minim duis nulla eiusmod elit voluptate laboris exercitation.
+
+### DLN Smart Contracts (EVM Chains)
+
+| **Smart Contract**       | **Address**                                   | **Description**                                                                                                             |
+|--------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
+| `DlnSource`              | `0xeF4fB24aD0916217251F553c0596F8Edc630EB66`   | Used to place orders on DLN.                                                                                                |
+| `DlnDestination`         | `0xe7351fd770a37282b91d153ee690b63579d6dd7f`   | Used to fulfill and cancel orders placed on DLN.                                                                            |
+| `CrosschainForwarder`    | `0x663dc15d3c1ac63ff12e45ab68fea3f0a883c251`   | Intermediary contract used exclusively by the DLN API to sell input assets for trusted liquid assets before order creation. |
