--- a/dmp/fees-supported-chains.mdx
+++ b/dmp/fees-supported-chains.mdx
@@ -1,23 +1,55 @@
 ---
 title: "Fees and Supported Chains"
 ---
+deBridge takes a flat fee for each cross-chain message transfer, which users pay for decentralization and confidence since half of all fees will go as
+a reward to [deBridge validators](https://app.debridge.finance/validation-progress) who will be [financially
+liable](/dmp/slashing-and-delegated-staking) for the proper operation of the protocol as liquid assets staked for them will act as protocol financial
+guarantees.
 
-Qui ex excepteur duis eu. Eu consectetur quis labore duis sunt aute est eiusmod sunt enim Lorem. In deserunt sint velit ipsum dolore reprehenderit anim cillum.
+The fee is paid in the blockchain's native (gas) token. For example, if the transfer is performed from the Ethereum chain, then the fixed ETH amount
+will be deducted from the user's wallet towards the protocol treasury on Ethereum.
 
-Veniam mollit ex pariatur nostrud nostrud voluptate tempor Lorem culpa occaecat. Minim Lorem amet sint adipisicing do commodo in tempor et. Non cillum id exercitation ullamco aliquip sunt magna ea dolore nostrud sint duis do. Velit voluptate aliqua sint officia adipisicing qui proident aliquip velit voluptate quis id irure. Excepteur id magna pariatur nisi ad est nostrud ipsum irure duis ut.
+Fees paid for every sent message can be seen in [deBridge Explorer](https://app.debridge.finance/explorer) or retrieved from the state of the
+[`DebridgeGate` smart contract](/dev-guides/evm/building-evm-dapp).
 
-Occaecat in sint cillum velit ipsum Lorem duis anim labore consectetur mollit voluptate laborum. Amet irure excepteur quis quis reprehenderit occaecat nulla nisi dolor. Cillum enim voluptate commodo mollit sit qui ipsum cillum ea culpa. Lorem aute magna fugiat veniam.
+<Info>
 
-Do pariatur ipsum amet duis nisi quis esse pariatur. Consectetur dolor irure cupidatat fugiat sit. Occaecat in commodo sint minim labore laborum cillum sint. Veniam amet ad ex minim fugiat. Commodo nulla excepteur pariatur consequat enim incididunt veniam deserunt officia labore dolore sit cupidatat.
+deBridge flat fees can be changed by governance. Hence, for any on-chain interactions with deBridge, fees must not be hardcoded but queried
+dynamically from the state of the `DebridgeGate` smart contract.
 
-Culpa enim et eiusmod amet sunt ea occaecat. Ullamco id deserunt magna nisi reprehenderit consequat voluptate non veniam reprehenderit officia consequat id. Ex exercitation magna qui tempor voluptate enim qui proident non. Nulla in ex proident deserunt esse. Reprehenderit aute nulla tempor sit velit duis proident enim ipsum laboris. Mollit labore adipisicing deserunt fugiat Lorem veniam Lorem deserunt ea. In sunt aute aute ipsum in ipsum ea deserunt cupidatat incididunt.
+</Info>
 
-Labore amet veniam ea Lorem commodo labore id aliquip voluptate laborum. Enim cupidatat nisi voluptate reprehenderit qui non occaecat cillum qui voluptate consequat nisi labore laborum. Laboris culpa occaecat in ea pariatur amet deserunt occaecat culpa in. Cillum aute magna nisi proident et nisi occaecat Lorem nisi proident esse.
+# Current flat fee for messages sent from different chains
 
-Amet veniam voluptate commodo ipsum nisi quis fugiat dolor adipisicing cupidatat officia voluptate in nulla. Ea sit consectetur dolore mollit sunt ullamco anim est sit nostrud mollit est occaecat aliqua. Cupidatat consectetur voluptate exercitation aliqua.
-
-Excepteur deserunt reprehenderit cillum sit laboris elit id. Excepteur ullamco laborum deserunt elit mollit enim dolore. Duis velit excepteur minim pariatur ipsum. Labore anim fugiat officia pariatur nostrud amet ad nisi cupidatat ex ea deserunt eu exercitation. Eu deserunt in aute reprehenderit enim commodo velit et anim ex deserunt sit tempor qui. Ullamco proident minim excepteur sit voluptate quis voluptate tempor mollit adipisicing ullamco. Culpa est qui enim ad incididunt eiusmod velit ut et nulla voluptate qui proident.
-
-Enim commodo deserunt excepteur dolor labore mollit consequat do. Deserunt sint magna voluptate occaecat culpa ullamco cillum. Sunt nulla ea ad non ea ullamco ut tempor magna cillum proident quis.
-
-Velit esse proident duis proident officia occaecat reprehenderit reprehenderit adipisicing. Reprehenderit cupidatat culpa aute proident dolor ex id. Irure sunt reprehenderit cupidatat fugiat ad tempor non nostrud enim. Magna pariatur Lorem ea laborum laboris consectetur cillum id.
+| **Chain**           | **Chain ID** | **Internal Chain ID** | **Message Transfer Fee** | **Block Finality** |
+|---------------------|--------------|------------------------|---------------------------|---------------------|
+| Arbitrum            | 42161        | 42161                  | 0.001 ETH                 | 12                  |
+| Avalanche           | 43114        | 43114                  | 0.05 AVAX                 | 12                  |
+| BNB Chain           | 56           | 56                     | 0.005 BNB                 | 12                  |
+| Ethereum            | 1            | 1                      | 0.001 ETH                 | 12                  |
+| Polygon             | 137          | 137                    | 0.5 MATIC                 | 256                 |
+| Fantom              | 250          | 250                    | 4 FTM                     | 12                  |
+| Solana              | 7565164      | 7565164                | 0.03 SOL                  | Status Finalized    |
+| Linea               | 59144        | 59144                  | 0.001 ETH                 | 12                  |
+| Optimism            | 10           | 10                     | 0.001 ETH                 | 12                  |
+| Base                | 8453         | 8453                   | 0.001 ETH                 | 12                  |
+| Neon                | 245022934    | 100000001              | 0.75 NEON                 | 32                  |
+| Gnosis              | 100          | 100000002              | 1 xDAI                    | 12                  |
+| Lightlink *(suspended)* | 1890    | 100000003              | 0.0005 ETH                | 12                  |
+| Metis               | 1088         | 100000004              | 0.02 METIS                | 12                  |
+| Bitrock             | 7171         | 100000005              | 20 BROCK                  | 12                  |
+| Sonic               | 146          | 100000014              | 1 S                       | 24                  |
+| CrossFi             | 4158         | 100000006              | 1 XFI                     | 12                  |
+| Cronos zkEVM        | 388          | 100000010              | 7 zkCRO                   | 12                  |
+| Abstract            | 2741         | 100000017              | 0.0004 ETH                | 12                  |
+| Berachain           | 80094        | 100000020              | 0.02 BERA                 | 12                  |
+| Story               | 1514         | 100000013              | 0.01 IP                   | 12                  |
+| HyperEVM            | 999          | 100000022              | 0.05 WHYPE                | 12                  |
+| Zircuit             | 48900        | 100000015              | 0.001 ETH                 | 12                  |
+| Flow                | 747          | 100000009              | 2.5 FLOW                  | 12                  |
+| Zilliqa             | 32769        | 100000008              | 50 ZIL                    | 12                  |
+| BOB                 | 60808        | 100000021              | 0.001 ETH                 | 12                  |
+| Mantle              | 5000         | 100000023              | 2 MNT                     | 12                  |
+| Plume               | 98866        | 100000024              | 7 PLUME                   | 12                  |
+| Sophon              | 50104        | 100000025              | 1 SOPH                    | 12                  |
+| Sei                 | 1329         | 100000027              | 6 SEI                     | 12                  |
